# llm_system

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.codex/: config.toml
.codex/agents/: experimenter.toml  implementer.toml  reviewer.toml  terra-experimenter.toml
doc/: agent_workflow.md  codex-task-state.md  decisions.md  domain_guide.md  glossary.md  goal.md  high_level_design.md  ideas.md  initial_scenario.md  requirements.md  roadmap.md  todo.md
doc/agent_roles/: architect.md  (+3 more)
tests/: test_actions.py  test_actor_action_authorization.py  test_actor_action_dispatch.py  test_actor_action_step.py  test_addressed_speech_feedback.py  test_api.py  test_caretaker_policy.py  test_courier_policy.py  test_current_state_perception.py  test_entity_definitions.py  test_events.py  test_game_package_validation.py  test_game_packages.py  test_greybridge_packages.py  test_model_gateway.py  test_move_resolver.py  test_narration.py  test_narration_style.py  test_npc_turn_coordinator.py  test_observe_resolver.py  test_outcome_commitment.py  test_outcomes.py  test_package.py  test_perception_contracts.py  test_player_input_traces.py  test_player_interpreter.py  test_player_page.py  test_player_turn_coordinator.py  test_recorded_random_draws.py  test_rule_pack_definition.py  test_runtime_state.py  test_scenario_pack_definition.py  test_scheduled_activity_contracts.py  test_scheduled_activity_selection.py  test_scheduled_execution.py  test_self_event_feedback.py  test_server.py  test_spatial_definitions.py  test_speak_resolver.py  test_speech_overhearing_feedback.py  (+8 more)
(+129 files in other folders)
