[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "llm-system"
version = "0.42.0"
description = "An experimental persistent simulation with LLM-assisted narrative."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.116,<1",
    "httpx2>=2.5,<3",
    "pydantic>=2,<3",
    "pyyaml>=6,<7",
    "streamlit>=1.47,<2",
    "uvicorn>=0.35,<1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_system"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.mypy]
files = ["src", "tests"]
python_version = "3.12"
strict = true
